# InvDet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install_aux.sh  requirements.txt  setup.py
source/: CMakeLists.txt
source/LCA/: LCA.hpp
source/aux/: CMakeLists.txt  Findbioinfo.cmake  extract_invaln.cpp
source/cppcore/: CMakeLists.txt  invdet_core.cpp  invdet_core.h  maxcut.cpp  maxcut.h  region.cpp  region.h
source/pyinvdet/: __init__.py  bamExtractor.py  fastqHeaderModifier.py  invdet_main.py  peGenerator.py
source/pyinvdet/LCA/: CMakeLists.txt  LCA.hpp  LCATree.hpp  RMQ.hpp  RMQLinear.hpp  RMQnlogn.hpp
source/pyinvdet/cppcore/: CMakeLists.txt  invdet_core.cpp  invdet_core.h  region.cpp  region.h
source/pyinvdet/test/: CMakeLists.txt  test.cpp
source/pyinvdet/util/: ExecStaging.py
source/pysrc/: CMakeLists.txt  invdet_core.pyx  maxcut.pyx
source/util/: CMakeLists.txt  ExcStaging.py  ExecStaging.py  relabel.h  relabelImpl.h
