cmake_minimum_required(VERSION 3.6)

project("invdet_proj")

if(SKBUILD)
    message(STATUS "Build Cython module")
    find_package(PythonInterp REQUIRED)
    find_package(PythonLibs REQUIRED)
    find_package(PythonExtensions REQUIRED)
    find_package(Cython REQUIRED)
endif()

set(CMAKE_POSITION_INDEPENDENT_CODE ON)
if($ENV{PRIVATE_INVDET})
    message(WARNING "===> Add 'FOR_NORA_EXAMINATION' macro")
    add_definitions(-DFOR_NORA_EXAMINATION)
else()
    message(WARNING "===> 'FOR_NORA_EXAMINATION' macro is not used")
endif()
add_subdirectory(source)
